# AiaxeMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.agents/skills/github-issues/: SKILL.md
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 85d250858768_change_timestamp_columns_to_timestamptz_.py  8bb6cac3dfc3_initial_schema_workspaces_documents_.py  seed_001_seed_default_workspace.py
docs/: agile.md  description.md  mvp-strategy.md
docs/sprints/: README.md  sprint-01-core-rag.md  sprint-02-socratic-engine.md  sprint-03-quality-testing-docs.md  sprint-04-improved-rag.md  sprint-05-multimodal.md  sprint-06-quizzes-spaced-repetition.md  sprint-07-paper-tutor.md  sprint-08-workspace-production.md
notebooks/: chunking_multi_document_evaluation.ipynb
services/embedding/: Dockerfile  app.py  logging_config.py
services/qdrant/: Dockerfile
src/api/: main.py
src/core/: logging_config.py
src/generation/: __init__.py  citations.py  exceptions.py  models.py  prompts.py  service.py
src/ingestion/chunking/: __init__.py  chunker.py
src/ingestion/parsers/: __init__.py  base.py  docx_parser.py  exceptions.py  factory.py  pymupdf_parser.py  unstructured_parser.py
src/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  message.py  workspace.py
src/retrieval/: __init__.py  exceptions.py  vector_store.py
tests/integration/: conftest.py  test_embedding_pipeline.py  test_llm_service_integration.py  test_parsers_integration.py  test_parsers_real_files.py
tests/unit/: conftest.py  test_chunker.py  test_citations.py  test_docx_parser.py  test_embedding_service.py  test_exceptions.py  test_factory.py  test_llm_service.py  test_parsers_base.py  test_parsers_unstructured.py  test_pymupdf_parser.py  test_vector_store.py
